--- a/static/style.css
+++ b/static/style.css
@@ -5,9 +5,12 @@
   border-radius: 5px;
 }
 */
+.gamecard img {
+  border-radius: 18px 18px 18px 18px;
+}
+
 .gamecard img:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  border-radius: 18px 18px 18px 18px;
 }
 
 /*
