--- a/templates/game.html
+++ b/templates/game.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DixIO — Game {{ game_name|replace("_", " ")|title }}</title>
-  <script src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <link rel="stylesheet" href="/static/style.css">
+{% extends "layout.html" %}
+{% block title %}Game {{ game_name|replace("_", " ")|title }}{% endblock %}
+{% block head %}
+  {{ super() }}
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
       // Use a "/test" namespace.
@@ -197,20 +190,11 @@
       });
     });
   </script>
-</head>
-<body>
-<!-- header -->
-<section class="section">
-  <div class="container">
-    <h1 class="title">
-      DixIO
-    </h1>
-    <p class="subtitle">
-      Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|replace("_", " ")|title }}!
-    </p>
-  </div>
-</section>
-<section class="section">
+{% endblock %}
+{% block subtitle %}
+Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|replace("_", " ")|title }}!
+{% endblock %}
+{% block content %}
   <!-- error notification -->
   <div id="notification_error" class="container">
   </div>
@@ -461,12 +445,10 @@
     <p>Cards remaining: <b id="b_nb_cards_pile"></b></p>
   </div>
 
-</section>
 <!--
 <audio id="audio_bell">
   <source src="/static/audio/bell.ogg" type="audio/ogg">
   <source src="/static/audio/bell.mp3" type="audio/mpeg">
 </audio>
 -->
-</body>
-</html>
+{% endblock %}
