--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
 <section class="section">
   <div class="container">
     <h1 class="title">
-      DixIO
+      <a href="/" class="has-text-dark">DixIO</a>
     </h1>
     <p class="subtitle">
       {% block subtitle %}{% endblock %}
